# parallax

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_STATUS_REPORT.md  README.md  justfile
benches/: colorspace.rs  isolation.rs  memory_pool.rs  throughput.rs
docs/: DEVELOPMENT_REPORT.md  IMPLEMENTATION_PLAN.md  PLAN_ICED_PIPELINE_INTEGRATION.md  PROJECT_ANALYSIS_REPORT.md  SECURITY_SANDBOX.md  SHAREDARENA_MIGRATION_REPORT.md  api.md  architecture.md  auto-converter-research.md  caps-negotiation-research.md  clock-system-research.md  design.md  elements-roadmap.md  foundation-design.md  getting-started.md  media-streaming-plan.md  memory.md  plugins.md  vulkan-video-design.md
docs/reports/: 2026-01-29-screen-capture-mp4-pipeline.md
examples/: 01_hello.rs  01_hello_pipeline.rs  02_counting_source.rs  02_transform.rs  03_tee.rs  03_transform_element.rs  04_funnel.rs  04_tee_fanout.rs  05_funnel_merge.rs  05_queue.rs  06_appsrc.rs  06_typed_pipeline.rs  07_appsrc_appsink.rs  07_file_io.rs  08_queue_backpressure.rs  08_tcp.rs  09_typed.rs  09_valve_control.rs  10_builder.rs  10_file_io.rs  11_buffer_pool.rs  11_isolate_in_process.rs  12_isolate_by_pattern.rs  12_isolation.rs  13_image.rs  13_isolate_all.rs  14_h264.rs  14_ipc_manual.rs  15_av1.rs  15_video_testsrc.rs  16_mpegts.rs  16_video_display.rs  17_introspection.rs  17_multi_format_caps.rs  18_demuxer_muxer.rs  18_gpu_decode.rs  19_auto_execution.rs  20_dynamic_state.rs  20_opus_audio.rs  21_tcp_streaming.rs  (+40 more)
examples/elements/: tier1_tier2_elements.rs
examples/example-plugin/: Cargo.toml
examples/example-plugin/src/: lib.rs
examples/ipc/: multi_process.rs
examples/isolation/: cross_process_pipeline.rs  easy_isolation.rs  process_isolation.rs
examples/video/: video_display.rs
parallax-macros/: Cargo.toml
parallax-macros/src/: lib.rs
plans/: 00_DESIGN_DECISIONS.md  01_CUSTOM_METADATA_API.md  02_CODEC_ELEMENT_WRAPPERS.md  03_MUXER_SYNCHRONIZATION.md  04_PIPELINE_BUFFER_POOL.md  05_ELEMENT_TRAIT_CONSOLIDATION.md  06_CAPS_NEGOTIATION.md  07_PIPELINE_BUILDER_DSL.md  08_EVENTS_AND_TAGGING.md  09_FORMAT_CONVERTERS.md  10_CODE_CLEANUP.md  11_GPU_CODEC_FRAMEWORK.md  12_ADDITIONAL_CODECS.md  13_DEVICE_ELEMENTS.md  14_STREAMING_PROTOCOLS.md  README.md  RUST_IDIOMS_REVIEW.md  clock-provider-implementation.md  plan-11-pipeline-robustness.md  videoconvert-simd-upgrade.md
src/: buffer.rs  clock.rs  error.rs  format.rs  lib.rs  metadata.rs
src/codec/: mod.rs
src/converters/: audio.rs  colorspace.rs  mod.rs  resample.rs  scale.rs
src/element/: context.rs  mod.rs  muxer.rs  pad.rs  pipeline_element.rs  traits.rs
src/elements/: appsink.rs  appsrc.rs  batch.rs  buffer_ops.rs  concat.rs  console.rs  data_processing.rs  datasrc.rs  delay.rs  fd.rs  file.rs  filter.rs  funnel.rs  http.rs  identity.rs  jitter_buffer.rs  memory.rs  metadata_ops.rs  mod.rs  multicast.rs  null.rs  passthrough.rs  queue.rs  rtp.rs  selector.rs  streamid_demux.rs  tcp.rs  tee.rs  testsrc.rs  timeout.rs  transform.rs  udp.rs  unix.rs  valve.rs  videotestsrc.rs  websocket.rs  zenoh.rs
src/elements/app/: appsink.rs  appsrc.rs  autovideosink.rs  iced_sink.rs  mod.rs
src/elements/codec/: aac.rs  audio.rs  audio_decoder_element.rs  audio_encoder_element.rs  audio_traits.rs  common.rs  decoder.rs  decoder_element.rs  encoder.rs  encoder_element.rs  h264.rs  hw_decoder.rs  hw_encoder.rs  image.rs  mod.rs  opus.rs  traits.rs
src/elements/demux/: mod.rs  mp4.rs  mpegts.rs  streamid_demux.rs
src/elements/device/: alsa.rs  libcamera.rs  mod.rs  pipewire.rs  screen_capture.rs  v4l2.rs
src/elements/flow/: concat.rs  funnel.rs  mod.rs  queue.rs  selector.rs  tee.rs  valve.rs
src/elements/io/: console.rs  fd.rs  file.rs  mod.rs
src/elements/ipc/: ipc.rs  ipc_elements.rs  memory.rs  mod.rs
src/elements/metadata/: klv.rs  mod.rs
src/elements/mux/: mod.rs  mp4.rs  mpegts.rs  ts_element.rs
src/elements/network/: http.rs  mod.rs  multicast.rs  tcp.rs  udp.rs  unix.rs  websocket.rs  zenoh.rs
src/elements/rtp/: jitter_buffer.rs  mod.rs  rtcp.rs  rtp.rs  rtp_codecs.rs  rtsp.rs
src/elements/streaming/: dash.rs  hls.rs  mod.rs  segment.rs
src/elements/testing/: datasrc.rs  mod.rs  null.rs  testsrc.rs  videotestsrc.rs
src/elements/timing/: delay.rs  mod.rs  rate_limiter.rs  timeout.rs
src/elements/transform/: audioconvert.rs  audioresample.rs  batch.rs  buffer_ops.rs  data_processing.rs  filter.rs  generic.rs  metadata_ops.rs  mod.rs  scale.rs  transform.rs  videoconvert.rs
src/elements/util/: identity.rs  mod.rs  passthrough.rs
src/event/: mod.rs  tags.rs
src/execution/: isolated_executor.rs  mod.rs  mode.rs  protocol.rs  sandbox.rs  supervisor.rs
src/gpu/: mod.rs  traits.rs
src/gpu/vulkan/: context.rs  decode.rs  decode_commands.rs  dpb.rs  error.rs  h264_parser.rs  memory.rs  mod.rs  session.rs
src/link/: ipc_link.rs  local.rs  mod.rs  network.rs
src/memory/: arena.rs  bitmap.rs  buffer_pool.rs  cpu.rs  defaults.rs  dmabuf.rs  heap.rs  huge_pages.rs  ipc.rs  mapped_file.rs  mod.rs  pool.rs  segment.rs  shared.rs  shared_refcount.rs
src/negotiation/: builtin.rs  converters.rs  error.rs  mod.rs  solver.rs
src/observability/: metrics.rs  mod.rs  tracing_support.rs
src/pipeline/: builder.rs  driver.rs  events.rs  executor.rs  factory.rs  flow.rs  graph.rs  hybrid_executor.rs  mod.rs  parser.rs  rt_bridge.rs  rt_scheduler.rs  unified_executor.rs
src/plugin/: descriptor.rs  loader.rs  mod.rs  registry.rs
src/temporal/: alignment.rs  mod.rs  timestamp.rs
src/typed/: bridge.rs  element.rs  mod.rs  multi_source.rs  operators.rs  pipeline.rs
tests/: arena_integration_tests.rs  backpressure_tests.rs  codec_tests.rs  container_tests.rs  ipc_stress_tests.rs  pipeline_integration.rs  timestamp_tests.rs
