[workspace]
members = [".", "parallax-macros", "examples/example-plugin"]

[package]
name = "parallax"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust-native streaming pipeline engine with zero-copy multi-process support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/parallax"
keywords = ["streaming", "pipeline", "zero-copy", "dataflow"]
categories = ["multimedia", "asynchronous", "data-structures"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "sync", "time"] }

# Channels (fast, MPMC, sync+async)
kanal = "0.1"

# Graph structure (enforces DAG)
daggy = { version = "0.9", features = ["stable_dag"] }

# Parsing
winnow = "0.7"

# Serialization (zero-copy)
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Buffer utilities
bytes = "1"
smallvec = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics & logging
metrics = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux system APIs (memfd, mmap, SCM_RIGHTS, eventfd)
rustix = { version = "1.0", features = ["mm", "fs", "net", "process", "pipe", "stdio", "event"] }
libc = "0.2"
futures = "0.3.31"
libloading = "0.8.9"
paste = "1.0.15"

# Proc macros (optional, for plugin authoring convenience)
parallax-macros = { path = "parallax-macros", optional = true }

# HTTP client (optional)
ureq = { version = "2", optional = true }

# WebSocket (optional)
tungstenite = { version = "0.21", optional = true }

# Zenoh pub/sub (optional)
zenoh = { version = "1.0", optional = true }

# RTP/RTCP (optional, from webrtc-rs)
# Note: rtp uses webrtc-util 0.12, rtcp uses webrtc-util 0.10
# We import both versions with different names to avoid diamond dependency issues
rtp = { version = "0.14", optional = true }
rtcp = { version = "0.12", optional = true }
webrtc-util = { version = "0.12", optional = true }
webrtc-util-0_10 = { package = "webrtc-util", version = "0.10", optional = true }

# RTSP client (optional)
retina = { version = "0.4", optional = true }
url = { version = "2", optional = true }

# MPEG-TS demuxer (optional)
mpeg2ts-reader = { version = "0.18", optional = true }

# Iced GUI (optional)
iced = { version = "0.14", optional = true, features = ["image", "tokio"] }

# Vulkan Video (optional)
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.27", optional = true }

# H.264 bitstream parsing (optional)
h264-reader = { version = "0.7", optional = true }

# AV1 software codecs (optional)
rav1e = { version = "0.7", optional = true }
# rav1d not yet on crates.io - using dav1d bindings as alternative
dav1d = { version = "0.10", optional = true }

# Regex (for RegexFilter)
regex = "1"

# Object-safe async traits
dynosaur = "0.3"
trait-variant = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.6"
proptest = "1"
tempfile = "3.24.0"

[features]
default = []
macros = ["parallax-macros"]  # Plugin authoring macros
huge-pages = []       # MAP_HUGETLB support
io-uring = []         # Future: io_uring async I/O
gpu = []              # Future: CUDA/Vulkan pinned memory
rdma = []             # Future: RDMA support
vulkan-video = ["dep:ash", "dep:gpu-allocator", "dep:h264-reader"]  # Vulkan Video codecs
software-codecs = ["dep:rav1e", "dep:dav1d"]  # Software AV1 codecs
http = ["ureq"]       # HTTP source/sink elements
websocket = ["tungstenite"]  # WebSocket source/sink elements
zenoh = ["dep:zenoh"] # Zenoh pub/sub elements
rtp = ["dep:rtp", "dep:rtcp", "dep:webrtc-util", "dep:webrtc-util-0_10"]  # RTP/RTCP elements
rtsp = ["rtp", "dep:retina", "dep:url"]  # RTSP client (includes RTP support)
mpeg-ts = ["dep:mpeg2ts-reader"]  # MPEG-TS demuxer
iced-sink = ["dep:iced"]  # Iced GUI video sink

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory_pool"
harness = false

[[bench]]
name = "isolation"
harness = false

# Examples - one concept per file, numbered for learning order

[[example]]
name = "01_hello_pipeline"

[[example]]
name = "02_counting_source"

[[example]]
name = "03_transform_element"

[[example]]
name = "04_tee_fanout"

[[example]]
name = "05_funnel_merge"

[[example]]
name = "06_typed_pipeline"

[[example]]
name = "07_appsrc_appsink"

[[example]]
name = "08_queue_backpressure"

[[example]]
name = "09_valve_control"

[[example]]
name = "10_file_io"

[[example]]
name = "11_isolate_in_process"

[[example]]
name = "12_isolate_by_pattern"

[[example]]
name = "13_isolate_all"

[[example]]
name = "14_ipc_manual"

[[example]]
name = "15_video_testsrc"

[[example]]
name = "16_video_display"
required-features = ["iced-sink"]

[[example]]
name = "17_introspection"
