[workspace]
members = [".", "parallax-macros", "examples/example-plugin"]

[package]
name = "parallax"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust-native streaming pipeline engine with zero-copy multi-process support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/parallax"
keywords = ["streaming", "pipeline", "zero-copy", "dataflow"]
categories = ["multimedia", "asynchronous", "data-structures"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "sync", "time"] }

# Channels (fast, MPMC, sync+async)
kanal = "0.1"

# Graph structure (enforces DAG)
daggy = { version = "0.9", features = ["stable_dag"] }

# Parsing
winnow = "0.7"

# Serialization (zero-copy)
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Buffer utilities
bytes = "1"
smallvec = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics & logging
metrics = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux system APIs (memfd, mmap, SCM_RIGHTS, eventfd)
rustix = { version = "1.0", features = ["mm", "fs", "net", "process", "pipe", "stdio", "event"] }
libc = "0.2"
futures = "0.3.31"
libloading = "0.8.9"
paste = "1.0.15"

# Proc macros (optional, for plugin authoring convenience)
parallax-macros = { path = "parallax-macros", optional = true }

# HTTP client (optional)
ureq = { version = "2", optional = true }

# WebSocket (optional)
tungstenite = { version = "0.21", optional = true }

# Zenoh pub/sub (optional)
zenoh = { version = "1.0", optional = true }

# RTP/RTCP (optional, from webrtc-rs)
# Note: rtp uses webrtc-util 0.12, rtcp uses webrtc-util 0.10
# We import both versions with different names to avoid diamond dependency issues
rtp = { version = "0.14", optional = true }
rtcp = { version = "0.12", optional = true }
webrtc-util = { version = "0.12", optional = true }
webrtc-util-0_10 = { package = "webrtc-util", version = "0.10", optional = true }

# RTSP client (optional)
retina = { version = "0.4", optional = true }
url = { version = "2", optional = true }

# MPEG-TS demuxer (optional)
mpeg2ts-reader = { version = "0.18", optional = true }

# Display (winit + softbuffer for autovideosink)
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }

# Vulkan Video (optional)
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.27", optional = true }

# H.264 bitstream parsing (optional)
h264-reader = { version = "0.7", optional = true }

# AV1 software codecs (optional)
# rav1e: use default-features=false to skip asm (slower), or install nasm for optimized builds
rav1e = { version = "0.8", optional = true, default-features = false, features = ["threading"] }
# dav1d requires system library (libdav1d-devel on Fedora, libdav1d-dev on Debian)
dav1d = { version = "0.11", optional = true }

# H.264 codec (OpenH264 - ships with source, compiles automatically)
openh264 = { version = "0.9", optional = true }

# Audio codecs - Symphonia (pure Rust)
symphonia = { version = "0.5", optional = true, default-features = false }

# Image codecs (pure Rust)
zune-jpeg = { version = "0.4", optional = true }
png = { version = "0.17", optional = true }

# Container formats (pure Rust)
mp4 = { version = "0.14", optional = true }

# PipeWire (audio/video capture and playback)
pipewire = { version = "0.8", optional = true }

# libcamera (modern camera API)
libcamera = { version = "0.4", optional = true }

# V4L2 (fallback video capture)
v4l = { version = "0.14", optional = true }

# ALSA (fallback audio capture/playback)
alsa = { version = "0.9", optional = true }

# XDG Portal (for screen capture permissions on Wayland)
ashpd = { version = "0.10", optional = true, default-features = false, features = ["tokio"] }

# Regex (for RegexFilter)
regex = "1"

# Object-safe async traits
dynosaur = "0.3"
trait-variant = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.6"
proptest = "1"
tempfile = "3.24.0"

[features]
default = []
macros = ["parallax-macros"]  # Plugin authoring macros
huge-pages = []       # MAP_HUGETLB support
gpu = []              # Future: CUDA/Vulkan pinned memory
rdma = []             # Future: RDMA support
vulkan-video = ["dep:ash", "dep:gpu-allocator", "dep:h264-reader"]  # Vulkan Video codecs
software-codecs = ["av1-encode", "av1-decode", "h264"]  # All software video codecs
av1-encode = ["dep:rav1e"]  # AV1 encoder (requires nasm on x86_64)
av1-decode = ["dep:dav1d"]  # AV1 decoder (requires libdav1d system library)
h264 = ["dep:openh264"]  # H.264 encoder/decoder (OpenH264, BSD-2 licensed)
# Audio codecs (all pure Rust via Symphonia)
audio-codecs = ["audio-flac", "audio-mp3", "audio-aac", "audio-vorbis"]
audio-flac = ["dep:symphonia", "symphonia/flac"]
audio-mp3 = ["dep:symphonia", "symphonia/mp3"]
audio-aac = ["dep:symphonia", "symphonia/aac"]
audio-vorbis = ["dep:symphonia", "symphonia/vorbis"]
# Image codecs (all pure Rust)
image-codecs = ["image-jpeg", "image-png"]
image-jpeg = ["dep:zune-jpeg"]
image-png = ["dep:png"]
http = ["ureq"]       # HTTP source/sink elements
websocket = ["tungstenite"]  # WebSocket source/sink elements
zenoh = ["dep:zenoh"] # Zenoh pub/sub elements
rtp = ["dep:rtp", "dep:rtcp", "dep:webrtc-util", "dep:webrtc-util-0_10"]  # RTP/RTCP elements
rtsp = ["rtp", "dep:retina", "dep:url"]  # RTSP client (includes RTP support)
mpeg-ts = ["dep:mpeg2ts-reader"]  # MPEG-TS demuxer
mp4-demux = ["dep:mp4"]  # MP4/MOV container demuxer
display = ["dep:winit", "dep:softbuffer"]  # Video display window (autovideosink)
# Device capture (modern Linux stack)
pipewire = ["dep:pipewire"]  # PipeWire audio/video capture/playback
libcamera = ["dep:libcamera"]  # Modern camera API (Raspberry Pi, embedded, etc.)
screen-capture = ["pipewire", "dep:ashpd"]  # Screen capture via XDG portal
# Device capture (fallback/low-level)
v4l2 = ["dep:v4l"]  # V4L2 video capture (fallback for simple webcams)
alsa = ["dep:alsa"]  # ALSA audio capture/playback (fallback)
# Combined device features
device-capture = ["pipewire", "libcamera"]  # Recommended device capture stack
device-all = ["pipewire", "libcamera", "screen-capture", "v4l2", "alsa"]  # All device capture

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory_pool"
harness = false

[[bench]]
name = "isolation"
harness = false

# Examples - one concept per file, numbered for learning order
# Run with: cargo run --example <name> [--features <feature>]

# Basic examples (01-12): no special features required
[[example]]
name = "01_hello"

[[example]]
name = "02_transform"

[[example]]
name = "03_tee"

[[example]]
name = "04_funnel"

[[example]]
name = "05_queue"

[[example]]
name = "06_appsrc"

[[example]]
name = "07_file_io"

[[example]]
name = "08_tcp"

[[example]]
name = "09_typed"

[[example]]
name = "10_builder"

[[example]]
name = "11_buffer_pool"

[[example]]
name = "12_isolation"

# Codec examples (13-16): require feature flags
[[example]]
name = "13_image"
required-features = ["image-codecs"]

[[example]]
name = "14_h264"
required-features = ["h264"]

[[example]]
name = "15_av1"
required-features = ["av1-encode"]

[[example]]
name = "16_mpegts"
required-features = ["mpeg-ts"]

# Device capture examples (22-26): require device feature flags
[[example]]
name = "22_v4l2_capture"
required-features = ["v4l2"]

[[example]]
name = "23_v4l2_display"
required-features = ["v4l2", "display"]

[[example]]
name = "24_autovideosink"
required-features = ["display"]
