[package]
name = "parallax-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros for the Parallax streaming pipeline engine"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
